--- a/api/assets/css/filesystem.css
+++ b/api/assets/css/filesystem.css
@@ -62,3 +62,11 @@ ul li span {
   display: inline-block;
   width: calc(100% - 1em);
 }
+
+@media (max-width: 991px) {
+  #filesystem {
+    width: 90%;
+    min-width: 85%;
+    max-width: 95%;
+  }
+}
